migrate a bunch of RUN instructions to the spark-base image since they belong there